# emergentlanguageagents

./: README.md  pyproject.toml
emergentlanguageagents/models/: __init__.py  builder.py  cnn.py  image_encoders.py  language_models.py  listener.py  receivers.py  senders.py  speaker.py
